--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   provider: elasticbeanstalk
   access_key_id: "$ACCESS_KEY"
   secret_access_key: "$SECRET_ACCESS_KEY"
-  region: "us-east-2"
-  app: "travisnode"
-  env: "Travisnode-env"
-  bucket_name: "elasticbeanstalk-us-east-2-517280624701"
+  region: "us-west-1"
+  app: "Travis-final-deployment"
+  env: "TravisFinalDeployment-env"
+  bucket_name: "elasticbeanstalk-us-west-1-499663575711"
